--- a/index.html
+++ b/index.html
@@ -388,19 +388,19 @@
               </div>
             </div>
           </div>
-          <div class="easystep-img"><img src="../multimedia/Bar_Graph_Window_9c570c3eda (1).png" alt="" width="640" height="420"></div>
+          <div class="easystep-img"><img src="./multimedia/Bar_Graph_Window_9c570c3eda (1).png" alt="" width="640" height="420"></div>
         </div>
        </div>
        </div>
         </div>
    </div>
-   <div class="last-curve"><img src="../multimedia/svgexport-11.svg" alt=""></div>
+   <div class="last-curve"><img src="./multimedia/svgexport-11.svg" alt=""></div>
        
    <div class="clients-review">
     <div class="clients-review1">
       <div class="client-sayings" >
        <div class="client-sayings1">
-        <img src="../multimedia/svgexport-14 (1).svg" alt="">
+        <img src="./multimedia/svgexport-14 (1).svg" alt="">
         <div class="review2-body">
           <h5>See what our clients are saying</h5>
           <a href="#">4.8/5 based on 9,215+ reviews</a>
